fixed scrollbar's style

--- a/main.css
+++ b/main.css
@@ -1,3 +1,20 @@
+html {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
+}
+
+body::-webkit-scrollbar {
+  width: 5px;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+  background-color: white;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #0f123f;
+}
+
 body {
   font-family: "Proxima Nova";
   font-size: 1rem;
